# yara-python-stubs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yara-stubs/: __init__.pyi
